--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(print,lm_analysis)
 S3method(step,default)
 S3method(step,lm_analysis)
 S3method(summary,lm_analysis)
+export(count_model)
 export(extract)
 export(extract.lm_analysis)
 export(get_estimates)
