New modeling result visualization functionality
Generics and S3 methods for Forest plots.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(formula,lm_analysis)
 S3method(model.frame,lm_analysis)
 S3method(nobs,lm_analysis)
 S3method(plot,lm_analysis)
+S3method(plot_forest,default)
+S3method(plot_forest,lm_analysis)
 S3method(predict,lm_analysis)
 S3method(print,lm_analysis)
 S3method(step,default)
@@ -20,6 +22,9 @@ export(get_stats)
 export(make_lm)
 export(nobs)
 export(plot.lm_analysis)
+export(plot_forest)
+export(plot_forest.default)
+export(plot_forest.lm_analysis)
 export(predict.lm_analysis)
 export(step)
 export(step.default)
