Residuals method for the lm_analysis object added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(plot_forest,default)
 S3method(plot_forest,lm_analysis)
 S3method(predict,lm_analysis)
 S3method(print,lm_analysis)
+S3method(residuals,lm_analysis)
 S3method(step,default)
 S3method(step,lm_analysis)
 S3method(summary,lm_analysis)
@@ -32,6 +33,7 @@ export(plot_forest.default)
 export(plot_forest.lm_analysis)
 export(plot_importance)
 export(predict.lm_analysis)
+export(residuals.lm_analysis)
 export(step)
 export(step.default)
 export(step.lm_analysis)
