--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,14 +18,18 @@ S3method(summary,lm_analysis)
 export(anova.default)
 export(anova.lm_analysis)
 export(count_model)
+export(distribution)
 export(extract)
 export(extract.lm_analysis)
 export(get_estimates)
 export(get_qc_plots)
 export(get_qc_tbl)
 export(get_stats)
+export(homogeneity)
+export(linearity)
 export(make_lm)
 export(nobs)
+export(normality)
 export(outer_rbind)
 export(plot.lm_analysis)
 export(plot_forest)
@@ -33,6 +37,7 @@ export(plot_forest.default)
 export(plot_forest.lm_analysis)
 export(plot_importance)
 export(predict.lm_analysis)
+export(prop_odds)
 export(residuals.lm_analysis)
 export(step)
 export(step.default)
