S3 argument compatibility with CRAN requirements

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(get_qc_plots)
 export(get_qc_tbl)
 export(get_stats)
 export(homogeneity)
+export(is_lm_analysis)
 export(linearity)
 export(make_lm)
 export(nobs)
